# bluezdev

./: .cproject  CMakeLists.txt  README.md
API/: CMakeLists.txt  INSTALL.md  Makefile  README.md  ble_api  ble_api.c  gattrib.c  log.c  utils.c
Code/: .cproject  .project  CMakeLists.txt
Code/include/glib/: glib.h
Code/src/: main.c
Dev/: README.md
Dev/API/: INSTALL.md  README.md  gatttool.c
Dev/Service/: README.md
Dev/Tool/: README.md  USAGE.md  gatttool.c
Docs/: BluetoothClient_BlockDiagram_v.0.1.vsd  ClientBluetoothLE-SDD-Logiciel.docx  ClientBluetoothLE-SRS-Logiciel.docx
LibDev/: gatttool.c
Software/include/: utils.h
Tools/Scripts/: GetConfigTest.sh  GetMasterConfig.sh  GetSensorDataTest.sh  GetSlaveIOData.sh  SetConfigTest.sh  SetMasterConfig.sh  SetSlaveConfig.sh
include/bluez/attrib/: gatttool.c
src/: utils.c
